--- a/.github/workflows/snake-contributions.yml
+++ b/.github/workflows/snake-contributions.yml
@@ -1,8 +1,8 @@
 name: Generate Snake
 
 on:
-  schedule: # execute every 6 hours
-    - cron: "* */6 * * *"
+  schedule: # execute every 18th hours
+    - cron: "* */18 * * *"
   workflow_dispatch:
 
 jobs:
