--- a/.github/workflows/snake-contributions.yml
+++ b/.github/workflows/snake-contributions.yml
@@ -1,8 +1,8 @@
 name: Generate Snake
 
 on:
-  schedule: # execute every 18th hours
-    - cron: "* */18 * * *"
+  schedule: # execute every hour
+    - cron: "* */1 * * *"
   workflow_dispatch:
 
 jobs:
@@ -15,7 +15,9 @@ jobs:
         id: snake-gif
         with:
           github_user_name: Harpia-Vieillot
+          gif_out_path: dist/github-contribution-grid-snake.gif
           svg_out_path: dist/github-contribution-grid-snake.svg
+
 
       - uses: crazy-max/ghaction-github-pages@v2.1.3
         with:
