--- a/.github/workflows/snake-contributions.yml
+++ b/.github/workflows/snake-contributions.yml
@@ -15,8 +15,8 @@ jobs:
         id: snake-gif
         with:
           github_user_name: Harpia-Vieillot
-          gif_out_path: dist/github-contribution-grid-snake.gif
-          svg_out_path: dist/github-contribution-grid-snake.svg
+          gif_out_path: dist/Harpia-Vieillot.gif
+          svg_out_path: dist/Harpia-Vieillot.svg
 
 
       - uses: crazy-max/ghaction-github-pages@v2.1.3
