--- a/.github/workflows/snake-contributions.yml
+++ b/.github/workflows/snake-contributions.yml
@@ -1,7 +1,7 @@
 name: Generate Snake
 
 on:
-  schedule: # execute every hour
+  schedule: # execute after every 2nd hour
     - cron: "* */2 * * *"
   workflow_dispatch:
 
@@ -21,7 +21,7 @@ jobs:
 
       - uses: crazy-max/ghaction-github-pages@v2.1.3
         with:
-          target_branch: output
+          target_branch: acinonyx
           build_dir: dist
         env:
           GITHUB_TOKEN: ${{ secrets.GITHUB_TOKEN }}
